--- a/CSS/About_Style.css
+++ b/CSS/About_Style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
     color: white;
     background-color: rgb(45 35 88);
 }
@@ -20,6 +21,8 @@ body {
 }
 
 .about-section p {
+    font-family: sans-serif;
+    font-weight: 100;
     font-size: 1.2rem;
     line-height: 1.6;
 }
