--- a/CSS/Blog_Style.css
+++ b/CSS/Blog_Style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
     background-color: rgb(45 35 88);
 }
 
