--- a/CSS/Contact_Style.css
+++ b/CSS/Contact_Style.css
@@ -1,6 +1,7 @@
 /* General Body Styles */
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
     background-color: #2d2358;
     color: #fff;
 }
