--- a/CSS/Index_Style.css
+++ b/CSS/Index_Style.css
@@ -1,6 +1,7 @@
 /* General Body Styles */
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
     background-color: #f8f9fa;
 }
 
