--- a/CSS/Index_Style.css
+++ b/CSS/Index_Style.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    background-color: #f8f9fa;
+    color: white;
   }
   
   /* Hero Section */
