--- a/CSS/Comman_Style.css
+++ b/CSS/Comman_Style.css
@@ -1,51 +1,33 @@
 /* Navigation Styles */
 .nav-custom {
-    background-color: #0d6efd; /* Bootstrap primary */
-    padding: 0.5rem;
-    border-radius: 1rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    background-color: #0d6efd;
+    padding: 0.3rem 0.5rem;
   }
   
   .nav-custom .nav-link {
-    color: #fff;
-    font-weight: 500;
-    padding: 0.6rem 1.2rem;
+    margin: 0px 0.5px;
+    color: white;
+    font-weight: 400;
+    padding: 0.3rem 0.8rem;
     border-radius: 50px;
-    transition: all 0.3s ease;
+    transition: all 0.25s ease;
     background: transparent;
-    position: relative;
-    z-index: 1;
-  }
-  
-  .nav-custom .nav-link::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: white;
-    border-radius: 50px;
-    z-index: -1;
-    opacity: 0;
-    transform: scale(0.8);
-    transition: all 0.3s ease;
-  }
-  
-  .nav-custom .nav-link:hover::before {
-    opacity: 0.2;
-    transform: scale(1);
   }
   
   .nav-custom .nav-link:hover {
-    color: #fff;
+    color: #ECAA4D;
+    background-color: rgba(0, 0, 0, 0.548);
+    border: 1px solid red;
   }
   
   .nav-custom .nav-link.active {
-    background-color: #fff;
-    color: #0d6efd;
-    font-weight: 600;
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.3);
+    color: #ECAA4D;
+    background-color: rgba(0, 0, 0, 0.747);
+    border: 1px solid red;
+    font-weight: 400;
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3);
   }
   
-
 /* Footer Section Styles */
 .footer {
     background-color: #343a40;
