--- a/CSS/Index_Style.css
+++ b/CSS/Index_Style.css
@@ -2,14 +2,14 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    color: white;
+    color: #ECAA4D;
   }
   
   /* Hero Section */
   .hero-section {
     background: url('../img/Imgb.gif') no-repeat center center;
     background-size: cover;
-    color: white;
+    color: #ECAA4D;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -24,7 +24,7 @@ body {
   /* Feature Section */
   .feature-section {
     background-color: #2d2358;
-    color: white;
+    color: #ECAA4D;
     padding: 60px 0;
     text-align: center;
   }
