--- a/CSS/Comman_Style.css
+++ b/CSS/Comman_Style.css
@@ -1,12 +1,12 @@
 /* Navigation Styles */
 .nav-custom {
-    background-color: #0d6efd;
+    background-color: 	#34495E;
     padding: 0.3rem 0.5rem;
   }
   
   .nav-custom .nav-link {
     margin: 0px 0.5px;
-    color: white;
+    color: #ECAA4D;
     font-weight: 400;
     padding: 0.3rem 0.8rem;
     border-radius: 50px;
@@ -16,7 +16,7 @@
   
   .nav-custom .nav-link:hover {
     color: #ECAA4D;
-    background-color: rgba(0, 0, 0, 0.548);
+    background-color: rgba(0, 0, 0, 0.402);
     border: 1px solid red;
   }
   
@@ -30,7 +30,7 @@
   
 /* Footer Section Styles */
 .footer {
-    background-color: #343a40;
+    background-color: 	#34495E;
     color: white;
     padding: 40px 0;
 }
